--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-
+torch
+transformers
+datasets
+sentence-transformers
+chromadb
+faiss-cpu
+pandas
+numpy
+scikit-learn
+streamlit
+soundfile
+huggingface_hub
